--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
         .services {
             padding: 6rem 0;
             background: #f8faff;
+            margin-top: 50%;
         }
 
         .section-header {
@@ -299,7 +300,7 @@
 
         .service-card::before {
             content: '';
-            position: absolute;
+            position: relative;
             top: 0;
             left: 0;
             width: 100%;
